remove comments in index html and fix scss

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="dir_img_wrapper">
                         <img src="img/direktor.jpg" alt="Director Vovchenko O.I." class="dir_img">
                     </div>
-                    <!-- <span class="greetings_speech">
+                    <span class="greetings_speech">
                         Я радий привітати Вас на сайті Інституту імпульсних процесів і технологій Національної академії
                         наук України.
                         На сторінках нашого сайту ми представляємо крім загальної інформації про інститут і його сучасні
@@ -58,7 +58,7 @@
                         директор Інституту імпульсних процесів і технологій НАН України,
                         член-кореспондент НАН України,
                         доктор технічних наук, професор.
-                    </span> -->
+                    </span>
                 </div>
                 <nav class="content_nav">
                     <a href="#">
