add some blocks

--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
                             <div class="hover_description">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="#technology">
                         <div class="link_wrapper link_3">
                             <div class="main_link_name">НАШІ ТЕХНОЛОГІЇ</div>
                             <div class="hover_description">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="#equipment">
                         <div class="link_wrapper link_4">
                             <div class="main_link_name">ВИСОКОВОЛЬТНЕ ОБЛАДНАННЯ</div>
                             <div class="hover_description">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="#results">
                         <div class="link_wrapper link_5">
                             <div class="main_link_name">НАУКОВІ ДОСЯГНЕННЯ ІНСТИТУТУ</div>
                             <div class="hover_description">Lorem ipsum dolor sit amet consectetur.</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="#works">
                         <div class="link_wrapper link_6">
                             <div class="main_link_name">НАУКОВІ ПРАЦІ ІНСТИТУТУ</div>
                             <div class="hover_description">Lorem ipsum dolor sit amet consectetur.</div>
@@ -498,6 +498,151 @@
 
                         <p>Відділ високовольтних імпульсних конденсаторів</p>
                         <p>(№ 36)</p>
+                    </div>
+                    <div class="technology_content" id="technology">
+                        <ul>
+                            <li>очищення лиття від стрижнів і залишків формувальної суміші з тонко- і товстостінних
+                                виливків
+                                будь-якого ступеня складності масою від 100 г до 200 т (у тому числі точне лиття);</li>
+
+                            <li>обробки призабійних зон нафтових, водозабірних і газових свердловин
+                                для підвищення їхньої продуктивності;</li>
+
+                            <li>листового штампування й калібрування;</li>
+
+                            <li>запресовування труб у трубних ґратах теплообмінних апаратів;</li>
+
+                            <li>зняття залишкових напруг при обробці металевих конструкцій;</li>
+
+                            <li>руйнування, дроблення й здрібнювання неметалічних матеріалів;</li>
+
+                            <li>обробки розплаву в ковші перед розливанням, у кристалізаторі й виливниці для істотного
+                                зменшення
+                                його структурної, фізичної й хімічної неоднорідності; підвищення службових характеристик
+                                металопродукції;</li>
+
+                            <li>готування й регенерація мастильно-охолоджувальних рідин (МОР) і різного роду стійких
+                                суспензій;</li>
+
+                            <li>генератори імпульсних струмів, призначені для електротехнічних пристроїв і
+                                электрофізичних
+                                установок;</li>
+
+                            <li>високовольтні імпульсні конденсатори;</li>
+
+                            <li>нові технології.</li>
+                        </ul>
+                    </div>
+                    <div class="equipmet_content" id="equipment">
+                        Нове потужне високовольтне встаткування
+
+                        ІІПТ НАН України веде розробку потужних високовольтних джерел живлення для электротехнологий з
+                        питомими показниками 10 кг/кВт, призначених для роботи в складі генераторів імпульсних струмів.
+
+                        ІІПТ традиційно розробляє електроустаткування для забезпечення электротехнологій. У цей час
+                        розроблені нові джерела живлення, зарядні пристрої ємнісних накопичувачів енергії, генератори
+                        імпульсних струмів.
+
+                        Нові потужні високовольтні генератори імпульсних струмів мають блокову конструкцію, що дозволяє
+                        змінювати їхнє компонування згідно вимогам замовників.
+
+                        Створено малогабаритний генератор імпульсних струмів (ГІС) з енергією в імпульсі 5 кДж, частотою
+                        проходження імпульсів 2 Гц, з робочою напругою 50 кВ, габаритні розміри ГІС 1500х450х750.
+
+                        На базі розроблених модулів генератора можуть створюватися могутніші ГІС, а також ГІС зі
+                        здатністю працювати на кілька каналів.
+
+                        Режими роботи ГІС Uн=50 кВ; Рн=Wf=10 кВт
+                        №
+                        п/п
+                        W,
+                        кДж
+                        f,
+                        Гц
+                        Кількість каналів
+                        C,
+                        мкФ
+                        Тип конденсатора
+                        1
+                        5
+                        2
+                        1
+                        4
+                        ИКУ 50/1
+                        2
+                        2,5
+                        4
+                        1
+                        2
+                        ИКУ 50/0,5
+                        3
+                        1,25
+                        8
+                        1
+                        1
+                        ИКУ 50/0,5
+                        4
+                        0,625
+                        16
+                        1
+                        0,5
+                        ИКУ 50/0,5
+                        5
+                        2,5
+                        2
+                        2
+                        4
+                        ИКУ 50/1
+                        6
+                        1,25
+                        4
+                        2
+                        2
+                        ИКУ 50/0,5
+                        Завдяки використанню нових зарядних пристроїв масогабарити реактивних елементів розробленого ГІС
+                        зменшені в 20 разів, а масогабарити всього ГІС в 6 разів.
+
+                        Порівняльні характеристики
+                        розробленого й базового серійного зразка (ТУ16-513.340-80)
+                        ГІС
+                        Вага,
+                        кг
+                        Габарити,
+                        мм
+                        Питома маса,
+                        кг/кВт
+                        Питомі габарити,
+                        3
+                        дм /кВт
+                        Розроблений
+                        генератор
+                        400
+                        1500х800х900
+                        40
+                        108
+                        Серійний генератор
+                        ТУ 16-513.340-80
+                        2 500
+                        1800х1650х1675
+                        250
+                        490
+                        На базі цих розробок створюється параметричний ряд джерел живлення для високовольтних технологій
+                        у діапазоні по потужності від 10 до 100 кВт напругою від 5 до 50 кВ.
+                    </div>
+                    <div class="scients_results_content" id="results">
+                        <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2012 рік</a>
+                        <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2013 рік</a>
+                        <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2014 рік</a>
+                    </div>
+                    <div class="scients_works_content" id="works">
+                        <a href="#">Перелік основних наукових праць провідних співробітників ІІПТ НАН України, у тому
+                            числі
+                            монографій, публікацій у збірниках наукових праць, виданих препринтів і методичних
+                            посібників,
+                            дисертацій, а також матеріалів Міжнародних наукових конференцій і шкіл-семінарів наведений
+                            на
+                            наступній сторінці
+                            нашого сайту</a>
                     </div>
                 </div>
             </div>
