add button and style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         доктор технічних наук, професор.
                     </span>
                 </div>
-                <nav class="content_nav">
+                <nav class="content_nav" id="main_nav">
                     <a href="#history">
                         <div class="link_wrapper link_1">
                             <div class="main_link_name">ІСТОРІЯ ІНСТИТУТУ</div>
@@ -123,7 +123,7 @@
                     </a>
                 </nav>
                 <div class="some_content">
-                    <div class="history_content" id="history">
+                    <div class="some_content_block history_content" id="history">
 
                         Матеріали про історію інституту підготувала Учений секретар ІІПТ НАН Україны к.т.н. Сінчук Алла
                         Вадимівна
@@ -471,7 +471,7 @@
                         гідним
                         внеском в зміцнення вітчизняної економіки.
                     </div>
-                    <div class="structure_content" id="structure">
+                    <div class="some_content_block structure_content" id="structure">
                         <p>Дирекція (Склад)</p>
 
                         <p>Наукові підрозділи</p>
@@ -499,7 +499,7 @@
                         <p>Відділ високовольтних імпульсних конденсаторів</p>
                         <p>(№ 36)</p>
                     </div>
-                    <div class="technology_content" id="technology">
+                    <div class="some_content_block technology_content" id="technology">
                         <ul>
                             <li>очищення лиття від стрижнів і залишків формувальної суміші з тонко- і товстостінних
                                 виливків
@@ -533,7 +533,7 @@
                             <li>нові технології.</li>
                         </ul>
                     </div>
-                    <div class="equipmet_content" id="equipment">
+                    <div class="some_content_block equipmet_content" id="equipment">
                         Нове потужне високовольтне встаткування
 
                         ІІПТ НАН України веде розробку потужних високовольтних джерел живлення для электротехнологий з
@@ -629,12 +629,12 @@
                         На базі цих розробок створюється параметричний ряд джерел живлення для високовольтних технологій
                         у діапазоні по потужності від 10 до 100 кВт напругою від 5 до 50 кВ.
                     </div>
-                    <div class="scients_results_content" id="results">
+                    <div class="some_content_block scients_results_content" id="results">
                         <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2012 рік</a>
                         <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2013 рік</a>
                         <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2014 рік</a>
                     </div>
-                    <div class="scients_works_content" id="works">
+                    <div class="some_content_block scients_works_content" id="works">
                         <a href="#">Перелік основних наукових праць провідних співробітників ІІПТ НАН України, у тому
                             числі
                             монографій, публікацій у збірниках наукових праць, виданих препринтів і методичних
@@ -644,6 +644,9 @@
                             наступній сторінці
                             нашого сайту</a>
                     </div>
+                    <a href="#main_nav" class="back_to_nav_link">
+                        <div class="back_to_nav">К ссылкам</div>
+                    </a>
                 </div>
             </div>
         </div>
