--- a/index.html
+++ b/index.html
@@ -470,6 +470,11 @@
                         новими ідеями і задумами, з надією, що новітні конкурентоздатні імпульсні технології стануть
                         гідним
                         внеском в зміцнення вітчизняної економіки.
+                        <div class="main_back_to_nav_link_wrapper">
+                            <a href="#main_nav" class="back_to_nav_link">
+                                <div class="back_to_nav">ВЕРНУТЬСЯ</div>
+                            </a>
+                        </div>
                     </div>
                     <div class="some_content_block structure_content" id="structure">
                         <p>Дирекція (Склад)</p>
@@ -498,6 +503,11 @@
 
                         <p>Відділ високовольтних імпульсних конденсаторів</p>
                         <p>(№ 36)</p>
+                        <div class="main_back_to_nav_link_wrapper">
+                            <a href="#main_nav" class="back_to_nav_link">
+                                <div class="back_to_nav">ВЕРНУТЬСЯ</div>
+                            </a>
+                        </div>
                     </div>
                     <div class="some_content_block technology_content" id="technology">
                         <ul>
@@ -532,6 +542,11 @@
 
                             <li>нові технології.</li>
                         </ul>
+                        <div class="main_back_to_nav_link_wrapper">
+                            <a href="#main_nav" class="back_to_nav_link">
+                                <div class="back_to_nav">ВЕРНУТЬСЯ</div>
+                            </a>
+                        </div>
                     </div>
                     <div class="some_content_block equipmet_content" id="equipment">
                         Нове потужне високовольтне встаткування
@@ -628,11 +643,21 @@
                         490
                         На базі цих розробок створюється параметричний ряд джерел живлення для високовольтних технологій
                         у діапазоні по потужності від 10 до 100 кВт напругою від 5 до 50 кВ.
+                        <div class="main_back_to_nav_link_wrapper">
+                            <a href="#main_nav" class="back_to_nav_link">
+                                <div class="back_to_nav">ВЕРНУТЬСЯ</div>
+                            </a>
+                        </div>
                     </div>
                     <div class="some_content_block scients_results_content" id="results">
                         <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2012 рік</a>
                         <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2013 рік</a>
                         <a href="#">ОСНОВНІ НАУКОВІ РЕЗУЛЬТАТИ ІНСТИТУТУ за 2014 рік</a>
+                        <div class="main_back_to_nav_link_wrapper">
+                            <a href="#main_nav" class="back_to_nav_link">
+                                <div class="back_to_nav">ВЕРНУТЬСЯ</div>
+                            </a>
+                        </div>
                     </div>
                     <div class="some_content_block scients_works_content" id="works">
                         <a href="#">Перелік основних наукових праць провідних співробітників ІІПТ НАН України, у тому
@@ -643,10 +668,14 @@
                             на
                             наступній сторінці
                             нашого сайту</a>
+
+                        <div class="main_back_to_nav_link_wrapper">
+                            <a href="#main_nav" class="back_to_nav_link">
+                                <div class="back_to_nav">ВЕРНУТЬСЯ</div>
+                            </a>
+                        </div>
                     </div>
-                    <a href="#main_nav" class="back_to_nav_link">
-                        <div class="back_to_nav">К ссылкам</div>
-                    </a>
+
                 </div>
             </div>
         </div>
