--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css?v.1.1.4">
+    <link rel="stylesheet" href="css/style.css?v.1.1.5">
     <link rel="shortcut icon" href="img/tab_icon.png" type="image/png">
 
     <title>IIPT</title>
@@ -702,5 +702,6 @@
         </div>
     </footer>
 </body>
+<script src="js/script.js"></script>
 
 </html>
